src/css/Home.css
.arrow {
    position: fixed;
    bottom: 0%;
    right: 2%;
    width: 4%;
    cursor: pointer;
    transition: transform 0.3s ease;
    opacity: 0.8;
    z-index: 1;
}

.arrow:hover {
    transform: translateY(-8px);
}

.cirkel {
    position: absolute;
    top: 49.5%;
    left: 47.7%;
    z-index: 1;
    max-width: 14%;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.cirkel:hover {
    transform: scale(1.1);
}

/* navigatie */
.nav {
    position: absolute;
    bottom: 0%;
    left: 38.5%;
    font-size: 1.5vw;
    font-weight: 500;
    line-height: 1.5;
    text-align: left;
    color: #5E2F26;
    font-weight: 600;
    background-color: rgba(241, 235, 228, 0.8);
    padding-right: 2.2%;
    max-width: 75.8%;
    z-index: 1;
}

.nav ul {
    list-style: none;
}

.nav ul li a {
    font-size: inherit;
    font-weight: inherit;
    line-height: inherit;
    color: #5E2F26;
    text-decoration: none;
    white-space: nowrap;
}

.nav ul li a:hover {
    color: #f39821;
    text-decoration: none;
}

.nav ul li a:focus,
.nav ul li a:active,
.nav ul li a:visited {
    text-decoration: none;
}

/* footer */
.footer {
    position: absolute;
    bottom: 0px;
    z-index: 1;
    color: rgba(241, 235, 228, 0.8);
    font-size: 1.5vw;
    padding: 0.5%;
}




                        /* settings + hero images Pagina 1 t/m 8 */
.main-pagina {
    position: relative;
    display: flex;
    overflow: hidden;
    width: 100%;
    height: auto;
}

.main-image {
    display: block;
    width: 100%;
    height: auto;
}

/* titels pagina 1 en 8 */
.main-titel {
    position: absolute;
    top: 0%;
    font-size: 12vw;
    font-weight: 100;
    line-height: 1.2;
    color: #31545b;
    background-color: rgba(241, 235, 228, 0.8);
    padding-left: 10%;
    width: 43%;
}

.main-kop-anders {
    position: absolute;
    bottom: 17%;
    right: 0;
    font-size: 4vw;
    font-weight: 100;
    line-height: 1.2;
    color: #5E2F26;
    text-align: left;
    background-color: rgba(241, 235, 228, 0.8);
    padding-left: 1%;
    width: 81%;
}


/* titels pagina 1 t/m 8 */
.main-kop {
    position: absolute;
    bottom: 12%;
    right: 0;
    font-size: 4vw;
    font-weight: 100;
    line-height: 1.2;
    text-align: left;
    color: #5E2F26;
    background-color: rgba(241, 235, 228, 0.8);
    padding-left: 1%;
    width: 75.8%;
}

.main-tekst {
    position: absolute;
    bottom: -3.1%;
    right: 0;
    font-size: 2vw;
    font-weight: 500;
    line-height: 1.8;
    text-align: left;
    color: #5E2F26;
    background-color: rgba(241, 235, 228, 0.8);
    padding-right: 4%;
    padding-left: 1%;
    max-width: 75.8%;

}



/* image + titels overlay pagina 2 t/m 7 */
.overlay-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 95%;
    height: 100%;
    background-color: #172c3a;
    z-index: 2;
    overflow-y: auto;
    padding: 20px;
    box-sizing: border-box;
    transform: translateX(-100%); /* Buiten beeld */
    transition: transform 0.5s ease;
}
                      
/* Overlay container (in beeld als 'open') */
.overlay-container.open {
    transform: translateX(0); /* In beeld */
}

.overlay-image {
    float: left;
    display: block;
    width: 52%;
    margin-right: 2%;
}

.overlay-kop {
    font-size: 4vw;
    font-weight: 100;
    line-height: 1.2;
    text-align: left;
    color: rgba(241, 235, 228, 0.8);
    background-color: #172c3a;
    padding-right: 0%;
    margin-top: -0%;
}
  
.overlay-tekst {
    margin-top: -3.5%;
    font-size: 1.5vw;
    font-weight: 500;
    line-height: 1.8;
    text-align: left;
    color: rgba(241, 235, 228, 0.8);
    background-color: #172c3a;
    padding: 1.7% 3% 2% 0%;
    max-width: 100%;
}

.arrow-overlay {
    position: fixed;
    top: 1%;
    right: 6%;
    width: 3.5%;
    cursor: pointer;
    transition: transform 0.3s ease;
    transform: rotate(-90deg);
    opacity: 0.8;
    z-index: 2;
}

.arrow-overlay:hover {
    transform: rotate(-90deg) translateY(-8px);
}

